<resources>
    <string name="app_name">LogInSignIn</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="forget_your_password">Forget your password ?</string>
    <string name="signup">SignUp</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="welcome_back">Welcome Back !</string>
</resources>