<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LogInFragment">


        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="272dp"
            android:layout_height="48dp"
            android:layout_marginTop="208dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="272dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
            app:layout_constraintStart_toStartOf="@+id/editTextEmail"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

        <Button
            android:id="@+id/LogInButton"
            android:layout_width="272dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_style"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
            app:layout_constraintStart_toStartOf="@+id/editTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <TextView
            android:id="@+id/forgetTextView"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/forget_your_password"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/LogInButton"
            app:layout_constraintTop_toBottomOf="@+id/LogInButton"
            android:layout_width="wrap_content" />

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/signup"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/LogInButton"
            app:layout_constraintStart_toEndOf="@+id/forgetTextView"
            app:layout_constraintTop_toBottomOf="@+id/LogInButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>